hphp/hack/test/typecheck/reactive/memoize_mutable2.php.exp
File "memoize_mutable2.php", line 5, characters 20-34:
Memoized functions cannot return mutable objects. (Parsing[1002])
